spacing issue

--- a/_sass/template/components/_component--contact.scss
+++ b/_sass/template/components/_component--contact.scss
@@ -61,7 +61,7 @@
     padding: bl(3);
     box-sizing: border-box;
     border-radius: 8px;
-    margin-top: 24px;
+    margin-top: 24px !important;
   }
 
   .contact__email:focus,
